; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_stream.c_streamFreeCG.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_stream.c_streamFreeCG.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@streamFreeNACK = common dso_local global i64 0, align 8
@streamFreeConsumer = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @streamFreeCG(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %3 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = load i64, i64* @streamFreeNACK, align 8
  %7 = inttoptr i64 %6 to void (i8*)*
  %8 = call i32 @raxFreeWithCallback(i32 %5, void (i8*)* %7)
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i64, i64* @streamFreeConsumer, align 8
  %13 = inttoptr i64 %12 to void (i8*)*
  %14 = call i32 @raxFreeWithCallback(i32 %11, void (i8*)* %13)
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %16 = call i32 @zfree(%struct.TYPE_4__* %15)
  ret void
}

declare dso_local i32 @raxFreeWithCallback(i32, void (i8*)*) #1

declare dso_local i32 @zfree(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
